Blackpurl/src/objects/HomeSearch_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Additional_Fields_1__c</fullName>
        <label>Additional Fields 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Fields_2__c</fullName>
        <label>Additional Fields 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Fields_3__c</fullName>
        <label>Additional Fields 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Include_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Include Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Display_Label__c</fullName>
        <description>Object label to display on screen.</description>
        <label>Object Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Home Search Setting</label>
    <listViews>
        <fullName>All_With_Extra_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Status__c</columns>
        <columns>Display_Include_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All With Extra Fields</label>
    </listViews>
    <pluralLabel>Home Search Settings</pluralLabel>
</CustomObject>